// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test in GifExpertApp Show GifExpertApp component correctly 1`] = `
<div>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</div>
`;

exports[`Test in GifExpertApp Show categories list 1`] = `
<div>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="The Office"
      key="The Office"
    />
    <GifGrid
      category="The Big Bang Theory"
      key="The Big Bang Theory"
    />
  </ol>
</div>
`;
